# gpt-doc-gen

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: gpt.rs  main.rs  promts.rs  source.rs
